# wax

./: .gitignore  Cargo.toml  HACKING.md  LICENSE  README.md  release.toml
.github/workflows/: ci.yml  publish.yml
src/: app.rs  cache.rs  cli.rs  config.rs  error.rs  fetch.rs  lib.rs  main.rs  model.rs  output.rs  parser.rs  progress.rs  provider.rs  score.rs  soundcloud.rs  youtube.rs
tests/: dig_flow.rs  soundcloud_likes_dig_flow.rs  youtube_playlist_dig_flow.rs
tests/fixtures/: fan_a.html  fan_b.html  seed.html  soundcloud_likers.json  soundcloud_user_likes_a.json  soundcloud_user_likes_b.json  youtube_playlist_items_pl_one.json  youtube_playlist_items_pl_two.json  youtube_playlists.json  youtube_seed_playlist_hits.json  youtube_video_seed.json
