[package]
name = "wax"
version = "0.1.0"
edition = "2021"
description = "CLI for digging through public Bandcamp collector graphs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
directories = "5.0"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
scraper = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
